PHOENIX-7418 SystemExitRule errors out because of SecurityManager deprecation / removal (#1996)
run tests with -Djava.security.manager=allow
Catch and log SecurityManager exceptions in SystemExitRule